--- a/index-2.html
+++ b/index-2.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-<!-- Mirrored from devsalem.netlify.app/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 31 Oct 2023 10:02:49 GMT -->
+<!-- Mirrored from devsalem.netlify.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 31 Oct 2023 10:02:30 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
 <meta http-equiv="content-type" content="text/html;charset=utf-8" />
 <head>
     <meta charset="utf-8">
 
     <!-- Page Title-->
-    <title>Dev Salem</title>
+    <title>Dev Royale</title>
 
     <!-- Meta Tags-->
-    <meta name="description" content="Dev Salem is a creative web developer with other skills. Such as Social media management, creative designs, mobile app development and blockchain development as well.">
-    <meta name="keywords" content="Creative designs, creative designer, websites, wed development, mobile App development, Social media management, blockchain, Dev Salem, Salem, Salem's portfolio, onoja Salem, onoja.">
-    <meta name="author" content="Onoja Salem">
+    <meta name="description" content="Dev Royale is a creative web developer with other skills. Such as Technical Writing, creative designs, mobile app development and blockchain development as well.">
+    <meta name="keywords" content="Creative designs, creative designer, websites, wed development, mobile App development, Technical Writing, blockchain, Dev Royale, Royale, Royale's portfolio, Unity Ekeoba, ekeoba.">
+    <meta name="author" content="Unity Ekeoba">
 
     <!-- Viewport Meta-->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -87,7 +87,7 @@
 
     <!-- Copyright Start -->
     <div class="side-copyright">
-      <p><a href="#" target="_blank">Dev-Salem</a> 2022<br>all rights reserved</p>
+      <p><a href="#" target="_blank">Dev-Royale</a> 2023<br>all rights reserved</p>
     </div>
     <!-- Copyright End -->
 
@@ -258,9 +258,9 @@
                         <!-- Reply Messages End-->
 
                         <!-- Notify Contact Form Start-->
-                        <form class="form notify-form form-light"   action="https://formspree.io/f/mjvdggzl"
+                        <form class="form notify-form form-light"   action="https://formspree.io/f/mjvqzbez"
                          method="POST" >
-                          <input class="" type="email" placeholder="Email Adress*" required>
+                          <input class="" type="email" name="email" placeholder="Email Adress*" required>
                           <span class="inputs-description">*Required fields</span>
                           <button class="btn btn-l btn-gradient" type="submit">
                             <span class="btn-border"></span>
@@ -284,19 +284,19 @@
                 <div class="socials socials-absolute">
                   <ul>
                     <li>
-                      <a href="https://web.facebook.com/Dev.Salem.0/" target="_blank">Fb</a>
+                      <a href="https://web.facebook.com/unityekeoba25" target="_blank">Fb</a>
                     </li>
                     <li>
-                      <a href="https://instagram.com/dev_salem?igshid=NTA5ZTk1NTc=" target="_blank">In</a>
+                      <a href="https://www.instagram.com/unityekeoba" target="_blank">In</a>
                     </li>
                     <li>
-                      <a href="https://twitter.com/Dev___Salem?t=pz7MsZHGm-xpMUGJmnkP3w&amp;s=" target="_blank">Tw</a>
+                      <a href="https://twitter.com/UEkeoba" target="_blank">Tw</a>
                     </li>
                     <li>
-                      <a href="https://www.linkedin.com/in/onoja-salem-49a33b237" target="_blank">Li</a>
+                      <a href="https://www.linkedin.com/in/unity-ekeoba-2a68a9259/" target="_blank">Li</a>
                     </li>
                     <li>
-                      <a href="https://github.com/Onojasalem777" target="_blank">GIT</a>
+                      <a href="https://github.com/kemerald25/" target="_blank">GIT</a>
                     </li>
                   </ul>
                 </div>
@@ -420,50 +420,50 @@
                 <div class="row g-0 my-gallery" itemscope itemtype="http://schema.org/ImageGallery">
                   <!-- gallery single item -->
                   <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="img/portfolio/900x1200-portfolio-1.jpg" data-image="img/portfolio/900x1200-portfolio-1.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
-                      <img src="img/portfolio/900x1200-portfolio-1.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
+                    <a href="img/portfolio/900x1200-portfolio-1.png" data-image="img/portfolio/900x1200-portfolio-1.png" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
+                      <img src="img/portfolio/900x1200-portfolio-1.png" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
                     </a>
                     <figcaption class="my-gallery__description" itemprop="caption description">
-                      <h3> Deepend Mobile app 
-                        <small>Deepend Entertain mobile app </small>
+                      <h3> Agrinexa Website 
+                        <small>Agrinexa Responsive Website</small>
                       </h3>
-                      <p>Booking app for food, hotels, games, and music studio.</p>
+                      <p>Agrotech website for food, vegetables, livestocks, and more.</p>
                     </figcaption>
                   </figure>
                   <!-- gallery single item -->
                   <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="img/portfolio/900x1200-portfolio-2.jpg" data-image="img/portfolio/900x1200-portfolio-2.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
-                      <img src="img/portfolio/900x1200-portfolio-2.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
+                    <a href="img/portfolio/900x1200-portfolio-2.png" data-image="img/portfolio/900x1200-portfolio-2.png" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
+                      <img src="img/portfolio/900x1200-portfolio-2.png" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
                     </a>
                     <figcaption class="my-gallery__description" itemprop="caption description">
-                      <h3>iTour Website
-                        <small>Booking website for hotel reservations, rental of cars and boats</small>
+                      <h3>VOS Media Services Website
+                        <small>Media website for business conversation, digital marketing</small>
                       </h3>
-                      <p>Booking website for hotel reservations, rental of cars and boats and pay in cryptocurrency.</p>
+                      <p>Media website for business conversation, web design, social-media management and online advertisement.</p>
                     </figcaption>
                   </figure>
                   <!-- gallery single item -->
                   <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="img/portfolio/900x1200-portfolio-3.jpg" data-image="img/portfolio/900x1200-portfolio-3.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
-                      <img src="img/portfolio/900x1200-portfolio-3.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
+                    <a href="img/portfolio/900x1200-portfolio-3.png" data-image="img/portfolio/900x1200-portfolio-3.png" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
+                      <img src="img/portfolio/900x1200-portfolio-3.png" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
                     </a>
                     <figcaption class="my-gallery__description" itemprop="caption description">
-                      <h3>LoanGo website
-                        <small>loaning website</small>
+                      <h3>Acodex Letter-head and Business card design
+                        <small>Edutech Platform</small>
                       </h3>
-                      <p>Loan website to pay in PSS "Pay Small small" with little interest.</p> 
+                      <p>Edutech platform to learn basic web development, HTML, CSS, JavaScript.</p> 
                     </figcaption>
                   </figure>
                   <!-- gallery single item -->
                   <figure class="col-12 col-sm-6 my-gallery__item" itemprop="associatedMedia" itemscope itemtype="http://schema.org/ImageObject">
-                    <a href="img/portfolio/900x1200-portfolio-4.jpg" data-image="img/portfolio/900x1200-portfolio-4.jpg" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
-                      <img src="img/portfolio/900x1200-portfolio-4.jpg" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
+                    <a href="img/portfolio/900x1200-portfolio-4.png" data-image="img/portfolio/900x1200-portfolio-4.png" class="my-gallery__link" itemprop="contentUrl" data-size="900x1200">
+                      <img src="img/portfolio/900x1200-portfolio-4.png" class="my-gallery__image" itemprop="thumbnail" alt="Image description" />
                     </a>
                     <figcaption class="my-gallery__description" itemprop="caption description">
-                      <h3>Artistes and lyrics website
-                        <small>music website</small>
+                      <h3>Chaike website
+                        <small>Dating website</small>
                       </h3>
-                      <p>Music platform for earning and uploading music.</p>
+                      <p>Dating platform for meeting up and pairing up among matured minds.</p>
                     </figcaption>
                   </figure>
                 </div>
@@ -504,9 +504,9 @@
                     <div class="col-12 col-sm-6 contact-data__item">
                       <h5>Location</h5>
                       <p>
-                        10 Uwa Street
+                        4 Eyeye Street
                         <br>Benin city, Nigeria
-                        <br>300001
+                        <br>300103
                       </p>
                     </div>
                     <!-- Contact data single item -->
@@ -514,13 +514,13 @@
                       <h5>Follow us</h5>
                       <ul>
                         <li>
-                          <a href="https://web.facebook.com/Dev.Salem.0/" target="_blank">Facebook</a>
+                          <a href="https://web.facebook.com/unityekeoba25" target="_blank">Facebook</a>
                         </li>
                         <li>
-                          <a href="https://instagram.com/dev_salem?igshid=NTA5ZTk1NTc=" target="_blank">Instagram</a>
+                          <a href="https://www.instagram.com/unityekeoba" target="_blank">Instagram</a>
                         </li>
                         <li>
-                          <a href="https://twitter.com/Dev___Salem?t=pz7MsZHGm-xpMUGJmnkP3w&amp;s=" target="_blank">Twitter</a>
+                          <a href="https://twitter.com/UEkeoba" target="_blank">Twitter</a>
                         </li>
                       </ul>
                     </div>
@@ -530,17 +530,16 @@
                     <div class="col-12 col-sm-6 contact-data__item">
                       <h5>Phone</h5>
                       <p>
-                        <a href="tel:+12127089400">+234 816 630 9826</a>
-                        <a href="tel:+12127089400">+234 813 964 6697</a>
-                        <a href="tel:+12127089400">+234 902 858 5806</a>
+                        <a href="tel:+2349154656285">+234 915 465 6285</a>
+                        <a href="tel:+2348161395450">+234 816 139 5450</a>
                       </p>
                     </div>
                     <!-- Contact data single item -->
                     <div class="col-12 col-sm-6 contact-data__item">
                       <h5>Email</h5>
                       <p>
-                        <a href="mailto:onojasalem2020@gmail.com?subject=Message%20from%20your%20site">onojasalem2020@gmail.com</a>
-                        <a href="mailto:onojasalem777@gmail.com?subject=Message%20from%20your%20site">onojasalem777@gmail.com</a>
+                        <a href="mailto:unityekeoba18@gmail.com?subject=Message%20from%20your%20site">unityekeoba18@gmail.com</a>
+                        <a href="mailto:unityekeoba72@gmail.com?subject=Message%20from%20your%20site">unityekeoba72@gmail.com</a>
                       </p>
                     </div>
                   </div>
@@ -594,12 +593,12 @@
                     <!-- Write a Line Form Reply Group End -->
 
                     <!-- Write a Line Form Start -->
-                    <form class="form writealine-form form-light"   action="https://formspree.io/f/mjvdggzl"
+                    <form class="form writealine-form form-light"   action="https://formspree.io/f/mjvqzbez"
                       method="POST" >
                       <!-- Hidden Required Fields -->
-                      <input type="hidden" name="project_name" value="Dev Salem">
-                      <input type="hidden" name="admin_email" value="onojasalem2020@gmail.com">
-                      <input type="hidden" name="form_subject" value="Thanks for contacting Dev Salem"> 
+                      <input type="hidden" name="project_name" value="Dev Royale">
+                      <input type="hidden" name="admin_email" value="unityekeoba18@gmail.com">
+                      <input type="hidden" name="form_subject" value="Thanks for contacting Dev Royale"> 
                       <!-- END Hidden Required Fields-->
                        <input class="input-1" type="text" name="Name" placeholder="Your Name*" required>
                       <input class="input-2" type="email" name="E-mail" placeholder="Email Address*" required>
@@ -655,7 +654,7 @@
                 <div id="google-map">
                   <div id="google-container"> 
                     <p>
-                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.6609358438254!2d5.628840814467054!3d6.308199195434556!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1040d3eea0b2c667%3A0x104e84e0c8f87ae8!2s10%20Uwa%20St%2C%20Oka%20300104%2C%20Benin%20City%2C%20Edo!5e0!3m2!1sen!2sng!4v1674347133155!5m2!1sen!2sng" width="670" height="600" style="border:0; margin-top: 16px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.0814544913555!2d5.60653287443501!3d6.383488024775724!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x10472cd14cef3f11%3A0xa539e625f9bb0894!2s4%20Eyeye%20St%2C%20Uselu%20300103%2C%20Benin%20City%2C%20Edo!5e0!3m2!1sen!2sng!4v1698756894953!5m2!1sen!2sng" width="670" height="600" style="border:0; margin-top: 16px;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </p>
                   </div>
                   <div id="zoom-in">
@@ -780,5 +779,5 @@
 
 <!-- Mirrored from mixdesign.club/themeforest/unio/index-fullscreen-video-youtube.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 03 Dec 2022 16:57:51 GMT -->
 
-<!-- Mirrored from devsalem.netlify.app/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 31 Oct 2023 10:02:49 GMT -->
+<!-- Mirrored from devsalem.netlify.app/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 31 Oct 2023 10:02:49 GMT -->
 </html>
