--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <meta charset="utf-8">
 
     <!-- Page Title-->
-    <title>Dev Salem</title>
+    <title>Dev Royale</title>
 
     <!-- Meta Tags-->
-    <meta name="description" content="Dev Salem is a creative web developer with other skills. Such as Social media management, creative designs, mobile app development and blockchain development as well.">
-    <meta name="keywords" content="Creative designs, creative designer, websites, wed development, mobile App development, Social media management, blockchain, Dev Salem, Salem, Salem's portfolio, onoja Salem, onoja.">
+    <meta name="description" content="Dev Royale is a creative web developer with other skills. Such as Technical Writing, creative designs, mobile app development and blockchain development as well.">
+    <meta name="keywords" content="Creative designs, creative designer, websites, wed development, mobile App development, Technical Writing, blockchain, Dev Royale, Royale, Royale's portfolio, Unity Ekeoba, ekeoba.">
     <meta name="author" content="Unity Ekeoba">
 
     <!-- Viewport Meta-->
