--- a/index-2.html
+++ b/index-2.html
@@ -56,7 +56,7 @@
           <div class="loader-logo fadeIn">
             <!-- Your Logo Here -->
             <a href="#">
-            <img src="img/unio-logo-loader.svg" alt="Dev Salem's technology">
+            <img src="img/unio-logo-loader.svg" alt="Dev Royale's technology">
           </a>
           </div>
         </div>
@@ -72,7 +72,7 @@
       <div class="header__logo">
         <!-- Your Logo Here -->
         <a href="#"></a>
-        <img src="img/unio-logo.svg" alt="Dev Salem's technology">
+        <img src="img/unio-logo.svg" alt="Dev Royale's technology">
       </div>
       <!-- Logo End -->
 
